Icons has been changed

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Pepeganga SA</title>
+  <title>Bee Seller - Dropshipping</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/img/pepepaganga_ico.png">
@@ -21,7 +21,7 @@
   <div class="preloader">
     <div class="loader">
       <div class="loader__figure"></div>
-      <p class="loader__label">Pepeganga ...</p>
+      <p class="loader__label">Bee Seller ...</p>
     </div>
   </div>
   <app-root></app-root>
